--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- TITLE -->
-  <title>Inicio</title>
+  <title>INICIO | SIGIS</title>
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/img/logo.png" />
@@ -14,7 +14,7 @@
   <!-- MATERIAL TAILWIND -->
   <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
   
-  <!-- ESTILOS-->
+  <!-- STYLES -->
   <link rel="stylesheet" href="/css/index.css">
   <!-- <link rel="stylesheet" href="../static/css/index.css" /> -->
 </head>
@@ -52,7 +52,7 @@
 
   <div style="height: 20vh"></div>
 
-  <!-- MATERIAL TAILWIND CDN -->
+  <!-- SCRIPTS -->
   <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
   <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
 </body>
