--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- TITLE -->
-  <title>Login</title>
+  <title>LOGIN</title>
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/img/logo.png" />
