Corrección botones y plantilla

--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -32,7 +32,8 @@
     <h1 class="titulo-semillas">Semillas</h1>
     <hr class="separador">
 
-    <button class="importar-semillas">Importar semillas</button>
+    <a href="Plantilla_Semillas.xlsx" class="importar-semillas" download>Descargar plantilla</a>
+    <input type="file" id="importarSemillaArchivo" class="importar-semillas">
 
     <table  cellspacing="0" cellpadding="0">
       <thead>
