Importación de semillas

--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -41,7 +41,7 @@
 
       <div class="telefono">
         <span class="campo">Teléfono:</span>
-        <span class="valor" th:text="'+' + ${seed.contactData.telephone}"></span>
+        <span class="valor" th:text="${seed.contactData.telephone}"></span>
       </div>
 
       <div class="rol">
