--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -2,81 +2,88 @@
 
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <!-- TITLE -->
-  <title>Semillas</title>
+    <!-- TITLE -->
+    <title>Semillas</title>
 
-  <!-- FAVICON -->
-  <link rel="icon" type="image/png" href="/img/logo.png" />
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="/img/logo.png"/>
 
-  <!-- MATERIAL TAILWIND -->
-  <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
+    <!-- MATERIAL TAILWIND -->
+    <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
 
-  <!-- STYLES -->
-  <link href="/css/semillas.css" rel="stylesheet" />
-  <link href="/css/nav.css" rel="stylesheet" />
-  <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
+    <!-- STYLES -->
+    <link href="/css/semillas.css" rel="stylesheet"/>
+    <link href="/css/nav.css" rel="stylesheet"/>
+    <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
 
-  <!-- GOOGLE ICONS -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- GOOGLE ICONS -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 
 <body>
 
-  <nav th:replace=" fragments/nav :: _nav"></nav>
-  <main>
+<nav th:replace=" fragments/nav :: _nav"></nav>
+<main th:object="${seeds}">
 
     <h1 class="titulo-semillas">Semillas</h1>
     <hr class="separador">
 
-    <a href="Plantilla_Semillas.xlsx" class="importar-semillas" download>Descargar plantilla</a>
+    <a href="https://drive.google.com/uc?id=1h66iBuHcBR6FmHay8gYXBV6WRhPba5RO&export=download"
+       class="importar-semillas">Descargar plantilla</a>
     <input type="file" id="importarSemillaArchivo" class="importar-semillas">
+    <th:block th:if="${seeds.size} > 0">
+        <table cellspacing="0" cellpadding="0">
+            <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Rol</th>
+                <th>Comisión</th>
+                <th>Turno</th>
+                <th>Estado</th>
+                <th>&nbsp;</th>
+            </tr>
+            </thead>
 
-    <table  cellspacing="0" cellpadding="0">
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Rol</th>
-          <th>Comisión</th>
-          <th>Turno</th>
-          <th>Estado</th>
-          <th>&nbsp;</th>
-        </tr>
-      </thead>
+            <tbody id="tabla-semillas">
+            <tr th:each="seed : ${seeds}">
+                <td th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></td>
+                <td th:text="${seed.postulationData.rol}"></td>
+                <td th:text="${seed.followUp.commission}"></td>
+                <td th:text="${seed.postulationData.turn}"></td>
+                <td th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></td>
+                <td class="arrow"><a th:href="@{item/{id}(id=${seed.id})}"
+                                     class="material-symbols-outlined">arrow_right</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </th:block>
 
-      <tbody id="tabla-semillas">
-        <tr th:each="seed : ${seeds}">
-          <td th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></td>
-          <td th:text="${seed.postulationData.rol}"></td>
-          <td th:text="${seed.followUp.commission}"></td>
-          <td th:text="${seed.postulationData.turn}"></td>
-          <td th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></td>
-          <td class="arrow"><a th:href="@{item/{id}(id=${seed.id})}" class="material-symbols-outlined">arrow_right</a></td>
-        </tr>
-      </tbody>
-    </table>
-    
-  </main>
 
-  <div style="height: 20vh;"></div>
-  
-  <!-- SCRIPTS -->
-  <script src="/js/semillas.js"></script>
-  <!-- <script src="../../static/js/semillas.js"></script> -->
+</main>
 
-  <!-- MATERIAL TAILWIND CDN -->
-  <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
-  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
+<div style="height: 20vh;"></div>
 
-  <!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
+<!-- SCRIPTS -->
+<script src="/js/semillas.js"></script>
+<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
+<!-- <script src="../../static/js/semillas.js"></script> -->
 
-  <script th:inline="javascript">
+<!-- MATERIAL TAILWIND CDN -->
+<script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
+<script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
+
+<!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
+
+<script th:inline="javascript">
     let seeds = [[${seeds}]];
     console.log(seeds)
-  </script>
+</script>
 </body>
 
 </html>
