--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -17,6 +17,7 @@
 
   <!-- STYLES -->
   <link href="/css/nav.css" rel="stylesheet" />
+  <!-- <link href="../../static/css/nav.css" rel="stylesheet" /> -->
   <link href="/css/semillas.css" rel="stylesheet" />
   <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
   
@@ -31,7 +32,17 @@
     <h1 class="titulo-semillas">Semillas</h1>
     <hr class="separador">
 
-    <button class="importar-semillas">Importar semillas</button>
+    <div class="semillas-actions">
+      <button>
+        <span class="material-symbols-outlined">download</span>
+        Descargar plantilla
+      </button>
+  
+      <button>
+        <span class="material-symbols-outlined">upload_file</span>
+        Importar semillas
+      </button>
+    </div>
 
     <table  cellspacing="0" cellpadding="0">
       <thead>
