--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -29,6 +29,11 @@ html {
   box-sizing: border-box;
 }
 
+*::selection {
+	background: var(--verde-claro);
+	color: var(--blanco1);
+}
+
 *::-webkit-scrollbar {
   width: 0;
   height: 0;
@@ -62,6 +67,7 @@ nav img {
   position: absolute;
   right: 0;
   margin-right: 5rem;
+  user-select: none;
 }
 
 .user .avatar {
@@ -125,6 +131,7 @@ main a {
   justify-content: center;
   align-items: center;
   border-radius: 16px;
+  transition: 100ms ease;
 }
 
 .semillas {
