--- a/src/main/resources/static/css/semillas.css
+++ b/src/main/resources/static/css/semillas.css
@@ -29,6 +29,11 @@ html {
   box-sizing: border-box;
 }
 
+*::selection {
+	background: var(--verde-claro);
+	color: var(--blanco1);
+}
+
 *::-webkit-scrollbar {
   width: 3px;
   height: 3px;
@@ -58,7 +63,6 @@ a {
 } */
 
 main {
-	/* border: 1px solid red; */
 	width: 85%;
 	margin: 4rem auto 0;
 
@@ -76,12 +80,19 @@ main {
 }
 
 .separador{
-	border: 2px solid var(--verde-claro);
+	border: 1px solid var(--verde-claro);
 	width: 100%;
 }
 
-.importar-semillas {
+.semillas-actions {
 	margin: 4rem 0 2rem auto;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.semillas-actions button {
+	display: flex;
 	padding: .5rem 1.5rem;
 	border: 1px solid var(--verde-oscuro);
 	border-radius: 100px;
@@ -92,7 +103,11 @@ main {
 	cursor: pointer;
 }
 
-.importar-semillas:hover {
+.semillas-actions button span {
+	margin-right: .5rem;
+}
+
+.semillas-actions button:hover {
 	border: 1px solid var(--verde-claro);
 	color: var(--verde-claro);
 }
@@ -100,22 +115,19 @@ main {
 table {
 	width: 100%;
 	position: relative;
-}
-
-thead {
-	user-select: none;
-}
-
-th, td {
-	/* border: 1px solid red; */
-	margin: auto;
-	text-align: left;
+	display: none;
 }
 
 thead {
 	background: var(--verde-oscuro);
 	color: var(--gris-claro);
 	border-radius: 16px 16px 0px 0px;
+	user-select: none;
+}
+
+th, td {
+	margin: auto;
+	text-align: left;
 }
 
 th {
@@ -132,15 +144,23 @@ th:nth-child(6) {
 	border-radius: 0px 16px 0px 0px;
 }
 
-tbody td {
-	padding: 1rem;
+tbody tr {
 	background: var(--gris-claro);
 	color: var(--negro);
-	border-bottom: 1px solid var(--gris);
-	font-weight: 400;
 }
 
-td {
+tbody tr:hover {
+	background-color: var(--verde-fondo);
+}
+
+tbody tr:hover .arrow a {
+	color: var(--verde-claro);
+}
+
+tbody td {
+	padding: 1rem;
+	border-bottom: 1px solid var(--gris);
+	font-weight: 400;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -156,11 +176,10 @@ td.arrow a {
 	padding: 0;
 	display: grid;
 	text-align: center;
-	font-size: 2.1rem;
+	font-size: 2.2rem;
 }
 
 #pagination {
-	/* border: 1px solid red; */
 	position: absolute;
 	margin-top: 1rem;
 	width: 100%;
