--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,10 +2,10 @@
   <a th:href="@{/}"><img src="/img/logo_banner.png" alt="logo_semillero" class="img_logo_nav"></a>
   <div class="left_container">
     <div class="links_container">
-      <a th:href="@{/}">Inicio</a>
-      <a th:href="@{/seed/list}" aria-selected="true">Semillas</a>
-      <a th:href="@{/}">Aliados</a>
-      <a th:href="@{/}">Eventos</a>
+      <a class="item-inicio" th:href="@{/}">Inicio</a>
+      <a class="item-semillas" th:href="@{/seed/list}" aria-selected="true">Semillas</a>
+      <a class="item-aliados" th:href="@{/}">Aliados</a>
+      <a class="item-eventos" th:href="@{/}">Eventos</a>
     </div>
     <div class="user">
       <button data-ripple-light="true" data-popover-target="popover-animation" class="avatar">SJ</button>
