--- a/src/main/resources/static/css/semillas.css
+++ b/src/main/resources/static/css/semillas.css
@@ -57,14 +57,40 @@ a {
 	color: inherit;
 }
 
-/* nav {
-	height: 5rem;
-	background-color: var(--verde-fondo);
-} */
+/* NAV ITEMS */
+.item-inicio,
+.item-aliados,
+.item-eventos {
+  color: var(--verde-oscuro);
+  background-image: linear-gradient(
+    transparent 0%,
+    transparent 90%,
+    var(--verde-oscuro) 90%,
+    var(--verde-oscuro) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  background-position-x: right;
+  transition: background-size 300ms;
+}
+
+.item-inicio:hover,
+.item-aliados:hover,
+.item-eventos:hover{
+  background-size: 100% 100%;
+  background-position-x: left;
+}
+
+.item-semillas {
+	color: var(--verde-oscuro);
+	font-weight: 500;
+}
 
 main {
+	/* border: 1px solid red; */
+	display: relative;
 	width: 85%;
-	margin: 4rem auto 0;
+	margin: 9rem auto 0 auto;
 
 	display: flex;
 	flex-direction: column;
@@ -91,7 +117,8 @@ main {
 	gap: 1rem;
 }
 
-.semillas-actions button {
+.semillas-actions button,
+.semillas-actions label {
 	display: flex;
 	padding: .5rem 1.5rem;
 	border: 1px solid var(--verde-oscuro);
@@ -103,19 +130,57 @@ main {
 	cursor: pointer;
 }
 
-.semillas-actions button span {
+.semillas-actions button span,
+.semillas-actions label span {
 	margin-right: .5rem;
 }
 
-.semillas-actions button:hover {
+.semillas-actions button:hover,
+.semillas-actions label:hover {
 	border: 1px solid var(--verde-claro);
 	color: var(--verde-claro);
+}
+
+/* ALERTA */
+.exito-container,
+.error-container {
+	display: none;
+}
+.exito-container.active,
+.error-container.active {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
+}
+
+.exito-box,
+.error-box {
+	width: 504px;
+	height: 156px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: .5rem;
+	font-size: 1.5rem;
+	line-height: 32px;
+	background: var(--blanco1);
+	color: var(--verde-oscuro);
+	box-shadow: 0px 4px 4px rgba(23, 23, 23, 0.15);
+	border-radius: 16px;
+	user-select: none;
 }
 
 table {
 	width: 100%;
 	position: relative;
-	display: none;
 }
 
 thead {
