PRIMERA ENTREGA LISTA DIJE
Se corrigieron estilos, se agregó excel de prueba y se resolvió al 100% la lógica de importación de semillas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,63 +1,60 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TITLE -->
-    <title>Inicio</title>
+  <!-- TITLE -->
+  <title>INICIO | SIGIS</title>
 
-    <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="/img/logo.png"/>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="/img/logo.png" />
 
-    <!-- MATERIAL TAILWIND -->
-    <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
-
-    <!-- ESTILOS-->
-    <link rel="stylesheet" href="/css/index.css">
-    <!-- <link rel="stylesheet" href="../static/css/index.css" /> -->
+  <!-- MATERIAL TAILWIND -->
+  <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
+  
+  <!-- STYLES -->
+  <link rel="stylesheet" href="/css/index.css">
+  <!-- <link rel="stylesheet" href="../static/css/index.css" /> -->
 </head>
 
 <body>
-<nav>
+  <nav>
     <a th:href="@{/}">
-        <img src="/img/logo_banner.png" alt="semillero" class="marca">
-        <!-- <img src="../static/img/logo_banner.png" alt="semillero logo" /> -->
+      <img src="/img/logo_banner.png" alt="semillero" class="marca">
+      <!-- <img src="../static/img/logo_banner.png" alt="semillero logo" /> -->
     </a>
 
     <div class="user">
-        <button data-ripple-light="true" data-popover-target="popover-animation" class="avatar">SJ</button>
+      <button data-ripple-light="true" data-popover-target="popover-animation" class="avatar">SJ</button>
 
-        <div data-popover="popover-animation" data-popover-mount="opacity-100 scale-100"
-             data-popover-unmount="opacity-0 scale-0 pointer-events-none"
-             data-popover-transition="transition-all duration-200 origin-bottom"
-             class="absolute w-max whitespace-normal break-words rounded-lg border border-blue-gray-50 bg-white p-4 font-sans text-sm font-normal text-blue-gray-500 shadow-lg shadow-blue-gray-500/10 focus:outline-none">
-            <a href="#" class="name">Sofia Jason</a>
-            <button class="logout">Cerrar sesión</button>
-        </div>
+      <div data-popover="popover-animation" data-popover-mount="opacity-100 scale-100" data-popover-unmount="opacity-0 scale-0 pointer-events-none" data-popover-transition="transition-all duration-200 origin-bottom" class="absolute w-max whitespace-normal break-words rounded-lg border border-blue-gray-50 bg-white p-4 font-sans text-sm font-normal text-blue-gray-500 shadow-lg shadow-blue-gray-500/10 focus:outline-none">
+        <a href="#" class="name">Sofia Jason</a>
+        <button class="logout">Cerrar sesión</button>
+      </div>
     </div>
-</nav>
+  </nav>
 
-<main>
+  <main>
     <a th:href="@{/seed/list}" class="semillas">
-        <span>SEMILLAS</span>
+      <span>SEMILLAS</span>
     </a>
 
     <a th:href="@{/aliados}" class="aliados">
-        <span>ALIADOS</span>
+      <span>ALIADOS</span>
     </a>
 
     <a th:href="@{/eventos}" class="eventos">
-        <span>EVENTOS</span>
+      <span>EVENTOS</span>
     </a>
-</main>
+  </main>
 
-<div style="height: 20vh"></div>
+  <div style="height: 20vh"></div>
 
-<!-- MATERIAL TAILWIND CDN -->
-<script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
-<script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
+  <!-- SCRIPTS -->
+  <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
+  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
 </body>
 
 </html>
