--- a/src/main/resources/static/css/semillas.css
+++ b/src/main/resources/static/css/semillas.css
@@ -29,6 +29,11 @@ html {
   box-sizing: border-box;
 }
 
+*::selection {
+	background: var(--verde-claro);
+	color: var(--blanco1);
+}
+
 *::-webkit-scrollbar {
   width: 3px;
   height: 3px;
@@ -52,25 +57,45 @@ a {
 	color: inherit;
 }
 
-nav {
-	height: 5rem;
-	background-color: var(--verde-fondo);
+/* NAV ITEMS */
+.item-inicio,
+.item-aliados,
+.item-eventos {
+  color: var(--verde-oscuro);
+  background-image: linear-gradient(
+    transparent 0%,
+    transparent 90%,
+    var(--verde-oscuro) 90%,
+    var(--verde-oscuro) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  background-position-x: right;
+  transition: background-size 300ms;
+}
+
+.item-inicio:hover,
+.item-aliados:hover,
+.item-eventos:hover{
+  background-size: 100% 100%;
+  background-position-x: left;
+}
+
+.item-semillas {
+	color: var(--verde-oscuro);
+	font-weight: 500;
 }
 
 main {
 	/* border: 1px solid red; */
+	display: relative;
 	width: 85%;
-	margin: 4rem auto 0;
+	margin: 9rem auto 0 auto;
 
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
-
-.separador{
-	border: 2px solid var(--verde-claro);
-	width: 100%;
 }
 
 .titulo-semillas {
@@ -80,8 +105,21 @@ main {
 	margin-right: auto;
 }
 
-.importar-semillas {
+.separador{
+	border: 1px solid var(--verde-claro);
+	width: 100%;
+}
+
+.semillas-actions {
 	margin: 4rem 0 2rem auto;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.semillas-actions button,
+.semillas-actions label {
+	display: flex;
 	padding: .5rem 1.5rem;
 	border: 1px solid var(--verde-oscuro);
 	border-radius: 100px;
@@ -92,9 +130,52 @@ main {
 	cursor: pointer;
 }
 
-.importar-semillas:hover {
+.semillas-actions button span,
+.semillas-actions label span {
+	margin-right: .5rem;
+}
+
+.semillas-actions button:hover,
+.semillas-actions label:hover {
 	border: 1px solid var(--verde-claro);
 	color: var(--verde-claro);
+}
+
+/* ALERTA */
+.exito-container,
+.error-container {
+	display: none;
+}
+.exito-container.active,
+.error-container.active {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
+}
+
+.exito-box,
+.error-box {
+	width: 504px;
+	height: 156px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: .5rem;
+	font-size: 1.5rem;
+	line-height: 32px;
+	background: var(--blanco1);
+	color: var(--verde-oscuro);
+	box-shadow: 0px 4px 4px rgba(23, 23, 23, 0.15);
+	border-radius: 16px;
+	user-select: none;
 }
 
 table {
@@ -103,19 +184,15 @@ table {
 }
 
 thead {
+	background: var(--verde-oscuro);
+	color: var(--gris-claro);
+	border-radius: 16px 16px 0px 0px;
 	user-select: none;
 }
 
 th, td {
-	/* border: 1px solid red; */
 	margin: auto;
 	text-align: left;
-}
-
-thead {
-	background: var(--verde-oscuro);
-	color: var(--gris-claro);
-	border-radius: 16px 16px 0px 0px;
 }
 
 th {
@@ -132,19 +209,23 @@ th:nth-child(6) {
 	border-radius: 0px 16px 0px 0px;
 }
 
-tbody td {
-	padding: 1rem;
+tbody tr {
 	background: var(--gris-claro);
 	color: var(--negro);
-	border-bottom: 1px solid var(--gris);
-	font-weight: 400;
 }
 
 tbody tr:hover {
-	background: #c7c7c7;
+	background-color: var(--verde-fondo);
 }
 
-td {
+tbody tr:hover .arrow a {
+	color: var(--verde-claro);
+}
+
+tbody td {
+	padding: 1rem;
+	border-bottom: 1px solid var(--gris);
+	font-weight: 400;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -160,11 +241,10 @@ td.arrow a {
 	padding: 0;
 	display: grid;
 	text-align: center;
-	font-size: 2.1rem;
+	font-size: 2.2rem;
 }
 
 #pagination {
-	/* border: 1px solid red; */
 	position: absolute;
 	margin-top: 1rem;
 	width: 100%;
