--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -2,88 +2,106 @@
 
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TITLE -->
-    <title>Semillas</title>
+  <!-- TITLE -->
+  <title>SEMILLAS | SIGIS</title>
 
-    <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="/img/logo.png"/>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="/img/logo.png" />
 
-    <!-- MATERIAL TAILWIND -->
-    <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
+  <!-- MATERIAL TAILWIND -->
+  <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
 
-    <!-- STYLES -->
-    <link href="/css/semillas.css" rel="stylesheet"/>
-    <link href="/css/nav.css" rel="stylesheet"/>
-    <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
-
-    <!-- GOOGLE ICONS -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+  <!-- STYLES -->
+  <link href="/css/nav.css" rel="stylesheet" />
+  <!-- <link href="../../static/css/nav.css" rel="stylesheet" /> -->
+  <link href="/css/semillas.css" rel="stylesheet" />
+  <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
+  
+  <!-- GOOGLE ICONS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
+  <nav th:replace="fragments/nav :: _nav"></nav>
 
-<nav th:replace=" fragments/nav :: _nav"></nav>
-<main th:object="${seeds}">
-
+  <main th:object="${seeds}">
     <h1 class="titulo-semillas">Semillas</h1>
     <hr class="separador">
 
-    <a href="https://drive.google.com/uc?id=1h66iBuHcBR6FmHay8gYXBV6WRhPba5RO&export=download"
-       class="importar-semillas">Descargar plantilla</a>
-    <input type="file" id="importarSemillaArchivo" class="importar-semillas">
+    <div class="semillas-actions">
+      <a href="https://drive.google.com/uc?id=1h66iBuHcBR6FmHay8gYXBV6WRhPba5RO&export=download"
+       class="importar-semillas">
+        <button>
+          <span class="material-symbols-outlined">download</span>
+          Descargar plantilla
+        </button>
+      </a>
+  
+      <label for="importarSemillaArchivo">
+        <span class="material-symbols-outlined">upload_file</span>
+        Importar semillas
+      </label>
+      <input id="importarSemillaArchivo" type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" style="display: none;">
+    </div>
+    
+    <!-- ALERTS -->
+    <div class="exito-container">
+      <div class="exito-box">
+        <img src="https://icongr.am/clarity/check-circle.svg?size=60&color=395727" alt="Exitosa">
+        <span>Importación exitosa</span>
+      </div>
+    </div>
+
+    <div class="error-container">
+      <div class="error-box">
+        <img src="https://icongr.am/clarity/error.svg?size=60&color=395727" alt="Error">
+        <span>Error en la importación</span>
+      </div>
+    </div>
+
     <th:block th:if="${seeds.size} > 0">
-        <table cellspacing="0" cellpadding="0">
-            <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Rol</th>
-                <th>Comisión</th>
-                <th>Turno</th>
-                <th>Estado</th>
-                <th>&nbsp;</th>
-            </tr>
-            </thead>
+      <table  cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Rol</th>
+            <th>Comisión</th>
+            <th>Turno</th>
+            <th>Estado</th>
+            <th>&nbsp;</th>
+          </tr>
+        </thead>
 
-            <tbody id="tabla-semillas">
-            <tr th:each="seed : ${seeds}">
-                <td th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></td>
-                <td th:text="${seed.postulationData.rol}"></td>
-                <td th:text="${seed.followUp.commission}"></td>
-                <td th:text="${seed.postulationData.turn}"></td>
-                <td th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></td>
-                <td class="arrow"><a th:href="@{item/{id}(id=${seed.id})}"
-                                     class="material-symbols-outlined">arrow_right</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <tbody id="tabla-semillas">
+          <tr th:each="seed : ${seeds}">
+            <td th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></td>
+            <td th:text="${seed.postulationData.rol}"></td>
+            <td th:text="${seed.followUp.commission}"></td>
+            <td th:text="${seed.postulationData.turn}"></td>
+            <td th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></td>
+            <td class="arrow"><a th:href="@{item/{id}(id=${seed.id})}" class="material-symbols-outlined">arrow_right</a></td>
+          </tr>
+        </tbody>
+      </table>
     </th:block>
+  </main>
 
-
-</main>
-
-<div style="height: 20vh;"></div>
-
-<!-- SCRIPTS -->
-<script src="/js/semillas.js"></script>
-<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
-<!-- <script src="../../static/js/semillas.js"></script> -->
-
-<!-- MATERIAL TAILWIND CDN -->
-<script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
-<script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
-
-<!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
-
-<script th:inline="javascript">
+  <div style="height: 20vh;"></div>
+  
+  <!-- SCRIPTS -->
+  <script src="/js/semillas.js"></script>
+  <!-- <script src="../../static/js/semillas.js"></script> -->
+  <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
+  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
+  <script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
+  <script th:inline="javascript">
     let seeds = [[${seeds}]];
     console.log(seeds)
-</script>
+  </script>
 </body>
 
 </html>
