--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -35,15 +35,8 @@ html {
 }
 
 *::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
-}
-*::-webkit-scrollbar-thumb {
-  background: var(--verde-oscuro);
-  border-radius: 5px;
-}
-*::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1);
+  width: 0;
+  height: 0;
 }
 
 img {
