--- a/src/main/resources/static/css/semillas.css
+++ b/src/main/resources/static/css/semillas.css
@@ -35,15 +35,18 @@ html {
 }
 
 *::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+  width: 4px;
+  height: 4px;
 }
 *::-webkit-scrollbar-thumb {
-  background: var(--verde-oscuro);
+  background: var(--gris);
   border-radius: 5px;
 }
+*::-webkit-scrollbar-thumb:active {
+  background: var(--gris-oscuro);
+}
 *::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.001);
 }
 
 img {
@@ -227,6 +230,11 @@ tbody td {
 	border-bottom: 1px solid var(--gris);
 	font-weight: 400;
 	font-family: 'Roboto', sans-serif;
+}
+
+td.estado.green {
+	color: var(--verde-claro);
+	font-weight: 600;
 }
 
 td.arrow {
