--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,10 +15,10 @@
   <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
 
   <!-- STYLES -->
-  <link href="/css/nav.css" rel="stylesheet" />
-  <!-- <link href="../../static/css/nav.css" rel="stylesheet" /> -->
-  <link href="/css/semilla.css" rel="stylesheet" />
-  <!-- <link href="../../static/css/semilla.css" rel="stylesheet" /> -->
+  <!-- <link href="/css/nav.css" rel="stylesheet" /> -->
+  <link href="../../static/css/nav.css" rel="stylesheet" />
+  <!-- <link href="/css/semilla.css" rel="stylesheet" /> -->
+  <link href="../../static/css/semilla.css" rel="stylesheet" />
 
   <!-- GOOGLE ICONS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -36,42 +36,47 @@
     <div class="datos-semilla">
       <div class="nombre">
         <span class="campo">Nombre y Apellido:</span>
-        <span class="valor" th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></span>
+        <span class="valor" th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}">Luca Sassaroli</span>
       </div>
 
       <div class="telefono">
         <span class="campo">Teléfono:</span>
-        <span class="valor" th:text="${seed.contactData.telephone}"></span>
+        <span class="valor" th:text="${seed.contactData.telephone}">261 251 0655</span>
       </div>
 
       <div class="rol">
         <span class="campo">Rol:</span>
-        <span class="valor" th:text="${seed.postulationData.rol}"></span>
+        <span class="valor" th:text="${seed.postulationData.rol}">Frontend</span>
       </div>
 
       <div class="estado">
         <span class="campo">Estado:</span>
-        <span class="valor" th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></span>
+        <span class="valor valor-estado" th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}">Finalizó Proyecto</span>
       </div>
-
+      
       <div class="comision">
         <span class="campo">Comisión:</span>
-        <span class="valor" th:text="${seed.followUp.commission}"></span>
+        <span class="valor" th:text="${seed.followUp.commission}">E202304</span>
+      </div>
+
+      <div class="ifestado">
+        <span class="if campo">Proyecto:</span>
+        <span class="if valor valor-large">SIGIS in Mendoza</span>
+      </div>
+      
+      <div class="turno">
+        <span class="campo">Turno:</span>
+        <span class="valor" th:text="${seed.postulationData.turn}">Tarde</span>
       </div>
       
       <div class="certificado">
         <span class="campo">Certificado:</span>
         <th:block th:if="${seed.followUp.certification}">
-          <span class="valor">Enviado</span>
+          <span class="valor si">Enviado</span>
         </th:block>
         <th:block th:unless="${seed.followUp.certification}">
-          <span class="valor">No enviado</span>
+          <span class="valor no">No enviado</span>
         </th:block>
-      </div>
-
-      <div class="turno">
-        <span class="campo">Turno:</span>
-        <span class="valor" th:text="${seed.postulationData.turn}"></span>
       </div>
     </div>
 
@@ -180,7 +185,7 @@
       <div class="tab tab-modificar-estado">
         <div>
           <button class="modificar-estado-menu">
-            Modificar estado
+            Modificar Estado
             <span class="material-symbols-outlined arrow">
               arrow_right
             </span>
@@ -199,7 +204,7 @@
       <input type="radio" name="tabs" id="tabasignarproyecto">
       <label for="tabasignarproyecto">
         <span class="material-symbols-outlined">assignment_add</span>
-        <span>Asignar proyecto</span>
+        <span>Asignar Proyecto</span>
       </label>
       <div class="tab tab-asignar-proyecto">
         <p>POR MAQUETAR...</p>
@@ -247,17 +252,17 @@
   <div style="height: 20vh;"></div>
   
   <!-- SCRIPTS -->
-  <script src="/js/semilla.js"></script>
-  <!-- <script src="../../static/js/semilla.js"></script> -->
+  <!-- <script src="/js/semilla.js"></script> -->
+  <script src="../../static/js/semilla.js"></script>
   <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
   <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
 
   <!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
   
-  <script th:inline="javascript">
+  <!-- <script th:inline="javascript">
     let seed = [[${seed}]];
     console.log(seed)
-  </script>
+  </script> -->
 </body>
 
 </html>
